@@ -610,33 +610,6 @@ typedef	enum rpmsenseFlags_e {
 /** \name RPMRC */
 /*@{*/
 
-/* Stuff for maintaining "variables" like SOURCEDIR, BUILDDIR, etc */
-#define	RPMVAR_OPTFLAGS			3
-#define	RPMVAR_INCLUDE			43
-#define	RPMVAR_MACROFILES		49
-
-#define	RPMVAR_NUM			55	/* number of RPMVAR entries */
-
-/** \ingroup rpmrc
- * Return value of an rpmrc variable.
- * @deprecated Use rpmExpand() with appropriate macro expression.
- * @todo Eliminate from API.
- */
-/*@-redecl@*/
-/*@observer@*/ /*@null@*/
-extern const char * rpmGetVar(int var)
-	/*@*/;
-/*@=redecl@*/
-
-/** \ingroup rpmrc
- * Set value of an rpmrc variable.
- * @deprecated Use rpmDefineMacro() to change appropriate macro instead.
- * @todo Eliminate from API.
- */
-void rpmSetVar(int var, const char * val)
-	/*@globals internalState@*/
-	/*@modifies internalState @*/;
-
 /** \ingroup rpmrc
  * Build and install arch/os table identifiers.
  * @todo Eliminate from API.
