@@ -51,7 +51,9 @@
 	- set all rpmrc/macro goop from --target (if present).
 	- incorporate latest gcc flags into per-arch rpmrc defaults.
 	- kill off rpmMachineScore() functionality.
-	- remove rpmGet{Arch,Os}Info() and rpmGetMachine().
+	- kill off rpmGet{Arch,Os}Info() and rpmGetMachine().
+	- use rpmcliInit() in main(), trash the duplicated code.
+	- remove rpm{Get,Set}Var from the rpmlib API.
 
 4.4.5 -> 4.4.6:
 	- start 4.4.6 development.
